--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Les petits plats</title>
 </head>
 
 <body>
@@ -17,7 +17,8 @@
         <h1>Les petits plats</h1>
     </header>
     <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Rechercher une recette" aria-label="Search">
+        <input class="form-control me-2" id="search" type="text" placeholder="Rechercher une recette"
+            aria-label="Search">
     </form>
     <main class="main">
         <div class="addTag"></div>
@@ -32,7 +33,7 @@
         <section class="all-recipes"></section>
     </main>
     <script src="js/main.js" type="module"></script>
-    <i></i>
+
 </body>
 
 </html>
