push algo but need to fix bug

--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
             aria-label="Search">
     </form>
     <main class="main">
+        <!-- <div id="selector">
+            <div class="button-list">
+
+                <div class="ingredient"><button class="btn" id="ingredient" style="display: flex;">Ingrédient<i
+                            class="fa-solid fa-angle-down"></i></button>
+                    <div class="input-ingredient"><input placeholder="Rechercher un ingrédient" type="text"
+                            id="search-Ingredients-List" style="display: none;"><i class="fa-solid fa-angle-up"
+                            style="display: none;"></i></div>
+                    <ul class="list-ingredient" style="display: none;"></ul>
+                </div>
+                <div class="appliance"><button class="btn" id="Appliance">Appareil<i
+                            class="fa-solid fa-angle-down"></i></button>
+                    <div class="input-appliance"><input placeholder="Rechercher un appareil" type="text"
+                            id="search-Appliance-List" style="display: none;"><i class="fa-solid fa-angle-up"
+                            style="display: none;"></i></div>
+                    <ul class="list-appliance" style="display: none;"></ul>
+                </div>
+                <div class="ustensil"><button class="btn" id="Ustensil">Ustensils<i
+                            class="fa-solid fa-angle-down"></i></button>
+                    <div class="input-ustensil"><input placeholder="Rechercher un ustensils" type="text"
+                            id="search-Ustensils-List" style="display: none;"><i class="fa-solid fa-angle-up"
+                            style="display: none;"></i></div>
+                    <ul class="list-ustensil" style="display: none;"></ul>
+                </div>
+            </div>
+        </div> -->
+
+
         <div class="addTag"></div>
 
         <div id="selector">
@@ -33,6 +61,13 @@
         <section class="all-recipes"></section>
     </main>
     <script src="js/main.js" type="module"></script>
+
+
+
+
+
+
+
 
 </body>
 
