push end of func need to make branch for algo

--- a/index.html
+++ b/index.html
@@ -21,41 +21,55 @@
             aria-label="Search">
     </form>
     <main class="main">
-        <!-- <div id="selector">
-            <div class="button-list">
-
-                <div class="ingredient"><button class="btn" id="ingredient" style="display: flex;">Ingrédient<i
-                            class="fa-solid fa-angle-down"></i></button>
-                    <div class="input-ingredient"><input placeholder="Rechercher un ingrédient" type="text"
-                            id="search-Ingredients-List" style="display: none;"><i class="fa-solid fa-angle-up"
-                            style="display: none;"></i></div>
-                    <ul class="list-ingredient" style="display: none;"></ul>
-                </div>
-                <div class="appliance"><button class="btn" id="Appliance">Appareil<i
-                            class="fa-solid fa-angle-down"></i></button>
-                    <div class="input-appliance"><input placeholder="Rechercher un appareil" type="text"
-                            id="search-Appliance-List" style="display: none;"><i class="fa-solid fa-angle-up"
-                            style="display: none;"></i></div>
-                    <ul class="list-appliance" style="display: none;"></ul>
-                </div>
-                <div class="ustensil"><button class="btn" id="Ustensil">Ustensils<i
-                            class="fa-solid fa-angle-down"></i></button>
-                    <div class="input-ustensil"><input placeholder="Rechercher un ustensils" type="text"
-                            id="search-Ustensils-List" style="display: none;"><i class="fa-solid fa-angle-up"
-                            style="display: none;"></i></div>
-                    <ul class="list-ustensil" style="display: none;"></ul>
-                </div>
-            </div>
-        </div> -->
 
 
         <div class="addTag"></div>
-
         <div id="selector">
             <div class="button-list">
 
+                <div class="ingredient">
+                    <button class="btn" id="ingredient">Ingrédient
+                        <i class="fa-solid fa-angle-down iconDownIng"></i>
+                    </button>
+                    <div class="input-ingredient">
+                        <input placeholder="Rechercher un ingrédient" type="text" id="search-Ingredients-List">
+                        <i class="fa-solid fa-angle-up iconUpIng"></i>
+                    </div>
+                    <ul class="list-ingredient"></ul>
+                </div>
+
+
+
+                <div class="appliance">
+                    <button class="btn" id="appliance">Appareil
+                        <i class="fa-solid fa-angle-down iconDownAppl"></i>
+                    </button>
+                    <div class="input-appliance">
+                        <input placeholder="Rechercher un appareil" type="text" id="search-Appliance-List">
+                        <i class="fa-solid fa-angle-up iconUpAppl"></i>
+                    </div>
+                    <ul class="list-appliance"></ul>
+                </div>
+
+
+                <div class="ustensil">
+                    <button class="btn" id="ustensil">Ustensils
+                        <i class="fa-solid fa-angle-down iconDownUst"></i>
+                    </button>
+                    <div class="input-ustensil">
+                        <input placeholder="Rechercher un ustensils" type="text" id="search-Ustensils-List">
+                        <i class="fa-solid fa-angle-up iconUpUst"></i>
+                    </div>
+                    <ul class="list-ustensil"></ul>
+                </div>
             </div>
         </div>
+
+        <!-- <div id="selector">
+            <div class="button-list">
+
+            </div>
+        </div> -->
 
 
         <section class="all-recipes"></section>
