--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 
         <section class="all-recipes"></section>
+        <section class="test"></section>
     </main>
     <script src="js/main.js" type="module"></script>
 
